--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -14,7 +14,9 @@ h4 {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -252,6 +254,33 @@ ui bootstrap tweaks
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.p-20 {
+  padding: 20px;
+}
+
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active {
+  background-color: #00605e;
+  color: #fff;
+}
+
+.btn-ib {
+  color: #111;
+  background-color: #ffd200;
+}
+
+.btn-light {
+  color: #212529;
+  background-color: #e1dfe0;
+  border-color: #e1dfe0;
+}
+
+.dt-inline-block {
+  display: inline-block;
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
