--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -11,8 +11,12 @@ eg $input-color: red;
 @import '~bootstrap-vue/src/index.scss';
 @import '~bootswatch/dist/flatly/bootswatch';
 /* Dirty fix on navbar active link with bootswatch theme */
-nav li.router-link-active .navbar-dropdown-menu {
-  color: $navbar-dark-active-color;
+.nav-item.b-nav-dropdown.dropdown.pointer.router-link-active {
+  background-color: #00605e;
+}
+
+.nav-item.b-nav-dropdown.dropdown.pointer.router-link-active > .nav-link {
+  color: #fff !important;
 }
 
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
